public/responsive/wide.css
.grid .tile {
  width:47.5%;
  margin-left:1.5%;
  margin-right:0.5%;

}

footer {
  margin-top:46px;
}


/* Services  */
body.services section.main{
  left: 2%;
}

section.main article.introduction em {
  font-family: "Arial Narrow";
  font-size: 25px;
  font-weight: normal;
  text-transform: uppercase;
}

section.main article.introduction p {
  margin: 0;
  font-size: 16px;
}

section.main article.introduction {
  padding-left: 3%;
  padding-top: 40px;
}


/* Home     */
nav.cloud {
  position:absolute;
  right:0px;
  letter-spacing: 1px;
}

nav.cloud li {
  float:left;
  margin:0 13px 0 0;
}

.bottom .tile {
  width: 50%;
  margin-left: 0;
}

@media screen and (min-width: 1000px) {
  .bottom .tile {
    width:60%;
    margin-left: 0;
  }
  
  .bottom article.tile li {
    display: inline;    
  }  
}

@media screen and (max-width: 900px) {
  .bottom .tile {
    width: 55%;
  }
}

header, .main, footer section{
  max-width:1024px;
}

footer {
  min-width:100%;
  max-width:100%;
  margin-left:auto;
  margin-right:auto;
}

/* turn off logo on wide as we use brand-cloud-logo */
.home .logo {
  background:0;
}
.logo {
  background-position:top left;
}
.underline {
  top:2px;
}
.bottom-logo {
  background:url('/images/services/services_footer_logo.png') no-repeat;
  background-position: 16%;
  width:320px;
  height:72px;
  float: left;
}

/* .branding */
.brand-cloud-logo {
  background-image:url('/images/logo/with-background.png') ;
  background-repeat: no-repeat ;
  background-position:50% 0 ;
  height:564px;
  position:absolute;
  top:0px;
  width:inherit;
}
.branding {
  height:574px;
}

.brand-solid-texture {
  background:url('/images/branding/texture.png') repeat center center transparent;
  height:497px;
  position:absolute;
  position:absolute;
  top:67px;
  width:inherit;
}

.branding .cutout {
  background: url("/images/branding/texture.png") repeat scroll left top transparent;
  height: 70px;
  left: 61px;
  position: absolute;
  top: 0;
  width: 226px;
  z-index: 50;
}

.branding .mobiles {
  background-position: center center;
  background-image:url('/images/branding/mobiles-full.png');
  background-repeat:no-repeat;
  background-size: contain;
  height: 388px;
  width: 99%;
}

.branding {
  height:560px;
}


/* home */
.home .strategy .tile {
  margin-top: 2.5%;
  margin-bottom:1.5%;
  margin-right:1%;
  width: 30.5%; /* 3 tiles in grid */
}

.home .about .tile {
  margin-top: 24px;
}

.home .about .last {
  width: 31%; /* 1 tile of strategy */
  margin-bottom: 2em;
  margin-right: 1%;
  padding-left: 6.5%;
}
.home .about .first {
  width:57%; /* 2 tiles of strategy */
  margin-bottom:2em;
  margin-right:1%;
}

.home .community .leader {
  float:left;
  margin-right: 18px;
  margin-top: 12px;
}

.strategy p {
  margin-top: 3px;
  font-size: 16px;
}

.community p {
  margin-top: 2%;
  font-size: 16px;  
}

.community article.tile {
  width: 47%;
  padding-top: 16px;
}

.community article.tile[position="right"] {
  margin-left: 2%;
}

